--- a/Assignment-hw3.html
+++ b/Assignment-hw3.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Sriparna's CNIT132 page</title>
-<meta name="description" content="This is a basic HTML5 review assignment">
+<title>Sriparna's understanding of AI</title>
+<meta name="description" content="This is a basic HTML5 page created by Sriparna">
     
 <!-- 10.01.2019 -->
 <!--CNIT 132, Prof. Carmen Lamha, Fall 2019-->
@@ -15,7 +15,7 @@
 <body style="background-color:#fffaf0;">
 
 <header>
-<h1 style="text-align:center; font-weight:bold; color:darkblue;">Computational Neuroscience, Artificial Intelligence and Python - how it all connect!</h1>
+<h1 style="text-align:center; font-weight:bold; color:darkblue;">Computational Neuroscience, Artificial Intelligence and Python - how they all connect!</h1>
 <h2 style="text-align:center; font-style:italic;"><a href="https://www.ccsf.edu/" target="_blank">City College of San Francisco</a></h2>
 </header>
 <br><br>
