--- a/Assignment-hw3.html
+++ b/Assignment-hw3.html
@@ -12,7 +12,7 @@
 
 </head>
     
-<body style="background-color:#fffaf0;">
+<body style="background-color:#fffaf0;padding: 0 20px 0 20px;">
 
 <header>
 <h1 style="text-align:center; font-weight:bold; color:darkblue;">Computational Neuroscience, Artificial Intelligence and Python - how they all connect!</h1>
